<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <!--Logo-->
        <LinearLayout
            android:id="@+id/logo_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/logo_desc"
                android:src="@drawable/logo_b" />
        </LinearLayout>

        <!--Login-->
        <LinearLayout
            android:id="@+id/login_form_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_container"
            android:layout_marginTop="65dp"
            android:orientation="vertical"
            android:weightSum="1">

            <!--Email-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColorHint="@color/grey_0" />

            </android.support.design.widget.TextInputLayout>

            <!--Password-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColorHint="@color/grey_0" />
            </android.support.design.widget.TextInputLayout>

            <!--Login Button-->
            <Button
                android:id="@+id/btn_login"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/login_btn"
                android:text="@string/action_sign_in"
                android:textColor="@color/grey_0" />
        </LinearLayout>

        <!--Register-->
        <TextView
            android:id="@+id/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_form_container"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="@string/txt_register"
            android:textColor="@color/dark_blue"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!--Forget Password-->
        <Button
            android:id="@+id/btn_forget_password"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="2dp"
            android:background="@android:color/transparent"
            android:text="@string/action_forget_password"
            android:textColor="@color/background_blue_darker" />

    </RelativeLayout>
</LinearLayout>