<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White">

    <LinearLayout
        android:id="@+id/head_container"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/background_blue_darker"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_add_son"
            android:textColor="@color/White" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/head_container"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/txt_id" />

        <EditText
            android:id="@+id/txt_son_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1" />

        <LinearLayout
            android:id="@+id/btn_add"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_btn"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_positive_btn"
                android:textColor="@color/White"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/add_msg_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/add_content"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:id="@+id/txt_add_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:textSize="25sp" />

    </RelativeLayout>
</RelativeLayout>