<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:scatter="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.intrusoft.scatter.PieChart
        android:id="@+id/pie_chart"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        scatter:aboutChart="@string/tab3"
        scatter:aboutTextColor="@color/colorPrimaryDark"
        scatter:centerColor="@color/white"
        scatter:chartColor="@color/colorAccent"
        scatter:equalPartition="true"
        scatter:textColor="@color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:gravity="start"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@color/green_300" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:maxLines="1"
                android:text="@string/txt_skills_100"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@color/yellow_300" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:maxLines="1"
                android:text="@string/txt_skills_90_100"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@color/orange_300" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:maxLines="1"
                android:text="@string/txt_skills_80_90"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@color/red_300" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:maxLines="1"
                android:text="@string/txt_skills_80"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"/>

        </LinearLayout>


    </LinearLayout>

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:orientation="vertical"-->
    <!--android:weightSum="2">-->

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="130dp"-->
    <!--android:layout_weight="1"-->
    <!--android:orientation="horizontal"-->
    <!--android:weightSum="2">-->

    <!--<View-->
    <!--android:layout_width="1dp"-->
    <!--android:layout_height="match_parent"-->
    <!--android:background="@android:color/darker_gray" />-->

    <!--<LinearLayout-->
    <!--android:id="@+id/skills_100"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_weight="1"-->
    <!--android:gravity="center"-->
    <!--android:orientation="vertical"-->
    <!--android:weightSum="2">-->

    <!--<include layout="@layout/skills_100"/>-->

    <!--</LinearLayout>-->


    <!--<View-->
    <!--android:layout_width="1dp"-->
    <!--android:layout_height="match_parent"-->
    <!--android:background="@android:color/darker_gray" />-->


    <!--<LinearLayout-->
    <!--android:id="@+id/skills_100_90"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_weight="1"-->
    <!--android:gravity="center"-->
    <!--android:orientation="vertical"-->
    <!--android:paddingEnd="10dp"-->
    <!--android:paddingStart="10dp"-->
    <!--android:weightSum="2">-->

    <!--<include layout="@layout/skills_100_90"/>-->

    <!--</LinearLayout>-->

    <!--<View-->
    <!--android:layout_width="1dp"-->
    <!--android:layout_height="match_parent"-->
    <!--android:background="@android:color/darker_gray" />-->

    <!--</LinearLayout>-->

    <!--<View-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="1dp"-->
    <!--android:background="@android:color/darker_gray"-->
    <!--android:paddingTop="10dp" />-->

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="130dp"-->
    <!--android:layout_weight="1"-->
    <!--android:orientation="horizontal">-->

    <!--<View-->
    <!--android:layout_width="1dp"-->
    <!--android:layout_height="match_parent"-->
    <!--android:background="@android:color/darker_gray" />-->

    <!--<LinearLayout-->
    <!--android:id="@+id/skills_90_80"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_weight="1"-->
    <!--android:gravity="center"-->
    <!--android:orientation="vertical"-->
    <!--android:paddingTop="15dp"-->
    <!--android:weightSum="2">-->

    <!--<include layout="@layout/skills_90_80"/>-->

    <!--</LinearLayout>-->

    <!--<View-->
    <!--android:layout_width="1dp"-->
    <!--android:layout_height="match_parent"-->
    <!--android:background="@android:color/darker_gray" />-->

    <!--<LinearLayout-->
    <!--android:id="@+id/sleepHistoryLayout"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_weight="1"-->
    <!--android:gravity="center"-->
    <!--android:orientation="vertical"-->
    <!--android:paddingEnd="10dp"-->
    <!--android:paddingStart="10dp"-->
    <!--android:paddingTop="15dp"-->
    <!--android:weightSum="2">-->

    <!--<include layout="@layout/skills_less_80"/>-->

    <!--</LinearLayout>-->

    <!--<View-->
    <!--android:layout_width="1dp"-->
    <!--android:layout_height="match_parent"-->
    <!--android:background="@android:color/darker_gray" />-->

    <!--</LinearLayout>-->

    <!--</LinearLayout>-->
</LinearLayout>