<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/btn_delete"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_delete_white_24dp"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/btn_unread"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:layout_toLeftOf="@id/btn_delete"
                    android:layout_toStartOf="@id/btn_delete"
                    android:src="@drawable/ic_email_white_24dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/mail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:text="@string/title_activity_inbox"
                    android:textColor="@color/White"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/btn_back_mail"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_arrow_back_white_24dp"
                    android:visibility="gone" />

            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

        <View
            android:id="@+id/toolbar_shadow"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/toolbar_dropshadow" />

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:id="@+id/messages_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBar" />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/btn_new_parent_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:src="@drawable/ic_create_white_24dp"
        android:visibility="gone"
        app:fab_colorNormal="@color/colorAccent"
        app:fab_colorPressed="@color/colorPrimary"
        app:fab_colorRipple="@color/colorPrimary"
        app:fab_label="@string/txt_private_message"
        app:fab_shadowColor="@color/colorPrimaryDark"
        app:fab_shadowRadius="4dp"
        app:fab_shadowXOffset="1dp"
        app:fab_shadowYOffset="3dp"
        app:fab_showShadow="true"
        app:fab_size="normal"
        app:layout_behavior=".Scrolling_Floating_Action_Button.FAB_Hide_on_Scroll" />


    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/btn_new_teacher_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:visibility="gone"
        app:layout_behavior=".Scrolling_Floating_Action_Button.FAB_Hide_on_Scroll"
        app:menu_backgroundColor="#ccffffff"
        app:menu_colorNormal="@color/colorAccent"
        app:menu_colorPressed="@color/colorPrimary"
        app:menu_colorRipple="@color/colorPrimary"
        app:menu_fab_hide_animation="@anim/fab_slide_out_to_right"
        app:menu_fab_show_animation="@anim/fab_slide_in_from_right"
        app:menu_icon="@drawable/ic_create_white_24dp"
        app:menu_labels_colorNormal="@color/grey_100"
        app:menu_labels_ellipsize="end"
        app:menu_labels_singleLine="true"
        app:menu_labels_textColor="#000000"
        app:menu_shadowColor="@color/colorPrimaryDark">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/btn_private_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_message_white_18dp"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_colorPressed="@color/colorPrimary"
            app:fab_colorRipple="@color/colorPrimary"
            app:fab_label="@string/txt_private_msg"
            app:fab_shadowColor="@color/colorPrimaryDark"
            app:fab_shadowRadius="4dp"
            app:fab_shadowXOffset="1dp"
            app:fab_shadowYOffset="3dp"
            app:fab_showShadow="true"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/btn_group_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_message_white_18dp"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_colorPressed="@color/colorPrimary"
            app:fab_colorRipple="@color/colorPrimary"
            app:fab_label="@string/txt_group_msg"
            app:fab_shadowColor="@color/colorPrimaryDark"
            app:fab_shadowRadius="4dp"
            app:fab_shadowXOffset="1dp"
            app:fab_shadowYOffset="3dp"
            app:fab_showShadow="true"
            app:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout>